@@ -6,8 +6,10 @@ import android.support.v7.widget.RecyclerView;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
+import android.widget.Button;
 import android.widget.ImageView;
 import android.widget.TextView;
+import android.widget.Toast;
 
 import com.jakewharton.picasso.OkHttp3Downloader;
 import com.nsb.visions.varun.mynsb.R;
@@ -16,7 +18,10 @@ import com.squareup.picasso.Picasso;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
+import java.text.SimpleDateFormat;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Locale;
 
 /**
  * Created by varun on 22/01/2018. Coz varun is awesome as hell :)
@@ -24,11 +29,13 @@ import java.util.List;
 
 public class EventAdapter extends RecyclerView.Adapter<EventAdapter.EventViewHolder> {
 
-    public List<Event> events;
+    public List<Event> events = new ArrayList<>();
+    private Context context;
 
     // Constructor
-    public EventAdapter(List<Event> events) {
+    public EventAdapter(List<Event> events, Context context) {
         this.events = events;
+        this.context = context;
     }
 
 
@@ -55,11 +62,17 @@ public class EventAdapter extends RecyclerView.Adapter<EventAdapter.EventViewHol
         holder.eventName.setText(event.eventName);
         holder.shortDesc.setText(event.eventShortDesc);
         // Set the image into the eventImage box
-        try {
-            setImage(event, holder.eventImage);
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
+        setImage(event, holder.eventImage);
+        holder.readMore.setOnClickListener((v) -> {
+            // Fromat our dates
+            SimpleDateFormat formatter = new SimpleDateFormat("yyyy-MM-dd hh:mm");
+            String start = formatter.format(event.eventStart);
+            String end = formatter.format(event.eventEnd);
+
+            String message = String.format(Locale.ENGLISH, "Created By: %s, Starts: %s, Ends: %s", event.eventOrganiser, start, end);
+            Toast.makeText(this.context, message, Toast.LENGTH_LONG).show();
+        });
+
     }
 
     @Override
@@ -72,16 +85,19 @@ public class EventAdapter extends RecyclerView.Adapter<EventAdapter.EventViewHol
 
 
     // View holder class for the event instance
+    @SuppressWarnings("ALL")
     class EventViewHolder extends RecyclerView.ViewHolder {
         TextView eventName;
         TextView shortDesc;
         ImageView eventImage;
+        Button readMore;
 
         public EventViewHolder(View itemView) {
             super(itemView);
-            eventName  = (TextView) itemView.findViewById(R.id.eventTitle);
-            shortDesc  = (TextView) itemView.findViewById(R.id.description);
-            eventImage = (ImageView) itemView.findViewById(R.id.eventImage);
+            eventName  = itemView.findViewById(R.id.eventTitle);
+            shortDesc  = itemView.findViewById(R.id.description);
+            eventImage = itemView.findViewById(R.id.eventImage);
+            readMore = itemView.findViewById(R.id.readMore);
         }
     }
 
@@ -92,20 +108,24 @@ public class EventAdapter extends RecyclerView.Adapter<EventAdapter.EventViewHol
     /*
         UTILITY METHODS ===============================
      */
-    private void setImage(Event event, ImageView imageView) throws Exception {
-        // Start encoding the URL
-        URL url = new URL(event.eventPictureUrl);
-        URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(), url.getQuery(), url.getRef());
-        url = uri.toURL();
+    private void setImage(Event event, ImageView imageView) {
+        try {
+            // Start encoding the URL
+            URL url = new URL(event.eventPictureUrl);
+            URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(), url.getQuery(), url.getRef());
+            url = uri.toURL();
 
-        // Attain context
-        Context context = imageView.getContext();
+            // Attain context
+            Context context = imageView.getContext();
 
 
-        // Load the image with picasso
-        Picasso.with(context)
-            .load(url.toString())
-            .into(imageView);
+            // Load the image with picasso
+            Picasso.with(context)
+                .load(url.toString())
+                .into(imageView);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
     /*
         END UTILITY METHODS ===============================
